--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ font-family: Arial;
   margin: 0;
   padding: 0;
   min-height: 100%;
+    overflow-x: hidden;
 }
 
 body{
@@ -896,6 +897,7 @@ margin-top: 9px;
 
 
 }
+
 
 
 
