--- a/style.css
+++ b/style.css
@@ -4,11 +4,8 @@ font-family: Arial;
 }
 
  html,body {
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
   min-height: 100%;
-    overflow-x: hidden;
+  width:100%;
 }
 
 body{
@@ -897,6 +894,7 @@ margin-top: 9px;
 
 
 }
+
 
 
 
