Updated about us page
Refactor and clean up CSS styles for consistency and responsiveness.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 
  * {
 font-family: Arial;
+-webkit-user-select: none; /* Chrome, Safari */
+  -ms-user-select: none;     /* IE */
+  user-select: none;  
+   -webkit-tap-highlight-color: transparent;
 }
 
  html,body {
@@ -12,77 +16,77 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgba(222, 243, 59, 0.87);
-    display: flex;
-    flex-direction: column;
 }
 .navbar{
-    display: flex;
-    background-color: rgb(36, 33, 33);
-    height: 60px;
-    color: aliceblue;
-    padding-top: 10px;
-    gap: 20px;
+  background-color: rgb(36, 33, 33);
+  display: flex;
+  gap: 70px;
 }
-.logo img{
-  margin-top: -13px;
-    width: 120px;
-    height: 100px;
-    position: relative;
-    top: -7px;
+  .nav-top{
+    display: flex;
+    height: 80px;
+    color: aliceblue;
+    align-items: center;
+    gap: 50px;
+}
+.logo-img{
+    width: 140px;
+    height: 130px;
+    margin-top: 12px;
 } 
 
  .items {
     display: flex;
     list-style: none;
-    gap: 95px;
+    gap: 45px;
   } 
   .items li{
- margin-top: -7px;
- font-family: serif;
- font-size: 18px;
- padding: 6px;
- align-items: center;
- background-color: orange;
- border-radius: 0 15px;
+    display: flex;
+ width: 90px;
+ height: 40px;
+ background-color: rgba(255, 166, 0, 0.89);
+ border-radius: 12px 12px;
  color: black;
-
+ align-items: center;
+ justify-content: center;
+ font-size: 16px;
  }
  .items li:hover{
+  transform: scale(1.1);
   color: rgb(255, 232, 127);
   background-color: orange;
-  border-radius: 0 15px;
+  border-radius: 12px 12px;
   color: black;
-  box-shadow:  3px 3px 15PX rgba(255, 166, 0, 0.877);
+  box-shadow:  5px 5px 10PX orange;
+  font-size: 18px;
  }
  .items li:active{
     transition: transform 0.1s, box-shadow 0.1s;
   transform: scale(1.1);
-  box-shadow: 3PX 3px 15PX #cc7a00;
+
  }
  a{
     text-decoration: none;
     color: white;
  }
- .search{
+ .search-bar{
   display: flex;
+  flex-direction: row;
   align-items: center; 
-  margin-left: 30px;
 }
 
 
 .select {
   width: 45px;
   height: 40px;
-  border-radius: 0 0 0 15px;
-  transform: translatey(-4px);
- margin-right: -30px;
+  border-radius: 12px 0 0 12px;
   border: none;
   outline: none;
    -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   text-align: center;
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .select:hover{
@@ -92,19 +96,18 @@ body{
 
 }
 
-.search input {
-  position: relative;
-  transform: translatey(-4px);
-  flex: 1;                 
-  width: 480px;
-  height: 40px;
-  padding: 0 10px;         
-  font-size: 15px;
+.search-input {  
+  padding-left: 10px;
+  font-size: 17px; 
+  margin-left: -3.5px;
+  margin-right: -4.5px;
+  width: 630px;
+  height: 40px;       
   background-color: #f8f7f7;
-  right: -30px;
   border: 1px solid white;
   outline: none;
 }
+
 .search-input:hover{
   border: 2px solid #f8f7f7;
   border-color:orange;
@@ -112,60 +115,23 @@ body{
   border-right-color: white;
 }
 .button {
-  transform: translatey(-4px);
   height: 40px;
   width: 45px;
-  border-radius: 0 15px 0px 0;
+  border-radius: 0 12px 12px 0;
   background-color: orange;
   border: 2px solid orange;
-  margin-left: 30px;
   font-size: 24px;
-  padding: 2px 0 0 2px;
 }
-.button:hover{
+.button:active{
+  transform: scale(1.1);
   border-right-color: unset;
  border-color: orange ;
 }
 
-
- .login-button{
-      display: inline-block;     
-  width: 70px;               
-  height: 33px;             
-  line-height: 31px;          
-  text-align: center;
-margin-top: 9px;
-  margin-left: 230px;
-  background-color: orange;
-  color: black;
-  border-radius: 0 15px;
-  font-size: 18px;
-  text-decoration: none;
-  cursor: pointer;
-
-  }
-  .login-button:hover{
-    color: rgb(255, 232, 127);
-  background-color: orange;
-  border-radius: 0 10px;
-  color: black;
-  box-shadow:  3px 3px 15PX rgba(255, 166, 0, 0.877);
-  border-radius: 0 15px;
-  }
-  .login-button:active{
-   transition: transform 0.1s, box-shadow 0.1s;
-  transform: scale(1.1);
-  box-shadow: 3PX 3px 15PX #cc7a00;
-  }
-  .mobile{
-    background-color: rgb(134, 160, 172);
-    height:24px;
-    visibility: hidden;
-  }
   /* navbar start */
    .navbar-img{
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 70vh;
     background-size: contain;
  } 
@@ -213,7 +179,7 @@ margin-top: 9px;
     width: 350PX;
     height: 500px;
     border: none;
-    border-radius: 0 50px 0 50px;
+    border-radius: 30px;
     margin-bottom: 30px;
     margin-left: 20px;
     
@@ -359,172 +325,75 @@ margin-top: 9px;
 
   @media (min-width: 320px) and (max-width:650px) {
    .navbar{
-    /* display: flex; */
-    background-color: rgb(36, 33, 33);
-    height: 40px;
-    color: aliceblue;
-    padding-top: 1px;
-    width: 100vw;
+    display: flex;
+   flex-direction: column;
+   background-color: unset;
    }
-   .logo img{
-    width: 62px;
-    height: 58px;
-    position: relative;
-    top: 5px;
+   .nav-top{
+    background-color: rgb(36, 33, 33);
+    height: 50px;
+    width:100vw ;
+   }
+   .logo-img{
+    margin-top: 1px;
+    width: 70px;
+    height: 65px;
 }
 .items {
-    display: flex;
-    list-style: none;
-    gap: 18px;
-    position: relative;
-    right: 33px;
-    bottom: 7px;
+    margin-left: -70px;
+    gap: 10px;
   } 
   .items li{
-    margin: unset;
-  background-color: orange;
   color: black;
-  align-items: center;
-  width: 46px;
-  height: 15px;
-  text-align: center;
+  width: 55px;
+  height: 25px;
  font-size: 10px;
- padding: 3px;
- position: relative;
- right: 3px;
- border-radius: 0 6px;
- border: 0.01em solid rgba(219, 145, 7, 0.74);
- 
  }
  .items li:hover{
-  transition: transform 1s;
-  transform: scale(1.1);
-  border-radius: 0 6px;
-  padding: 3px;
-  color: rgb(231, 229, 229);
-  box-shadow:  1px 1px 7PX rgba(255, 166, 0, 10);
-  background-color:  rgba(255, 166, 0, 0.815);
+  font-size: 12px;
  }
- .items li:active{
-    transition: transform 0.1s, box-shadow 0.1s;
-  transform: scale(1.1);
-  box-shadow: 1px 1px 10 #cc7a00;
- }
+
  a{
     text-decoration: none;
-    color: white;
  }
  
-.search{
- position: relative;
-  /* right: 134px; */
-  width: 100vw;
-  top: 3px;
+.search-bar{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: -69px;
+  
 }
 
 .select {
-  width:24px;
-  height: 26px;
-  border: 1px solid black;
-  border-right: none;
-  outline: none;
+  width:27px;
+  height: 24px;
   font-size: 9px;
- position: relative;
- top: 35px;
- right: 364px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  text-align: center;
-  position: relative;
-  border-radius: 0px;
+  border-radius: 0;
 }
 .select option{
   font-size: 7px;
   width: 500px;
 }
-.select:hover{
-  border: 0.5px solid white;
-  border-color: orange;
-  border-right-color: white;
 
-}
 
-.search input {
-  position: relative;
-  transform: translatey(-4px);
-  flex: 1;                 
-  /* width: 89vw; */
-  height: 26px;
-  padding: 0 10px;         
+.search-input {
+  width: 100;
+  height: 24px;
+  padding-left: 10px;         
   font-size: 9px;
-  background-color: #f8f7f7;
-  right: 340px;
-  border: 1px solid black;
-  border-left:none;
-  border-right: none;
-  outline: none;
-  top: 35px;
 }
-.search-input:hover{
-  border: 0.1px solid #f8f7f7;
-  border-color:orange;
-  border-left-color: white;
-  border-right-color: white;
-}
+
 .button {
-  transform: translatey(-4px);
-  height: 26px;
+  height: 24px;
   width: 25px;
   background-color: orange;
-  border: 1px solid black;
-  border-left: none;
+  border: 1px solid orange;
   font-size: 12px;
-  position: relative;
-  right: 370px;
-  top: 35px;
-   border-radius: 0px;
-  padding: 1px 0 0 1px;
+  border-radius: 0;
 }
-.button:hover{
-  border-color: orange;
-}
-
- .login-button{
-      display: inline-block;  
-  width: 40px;               
-  height: 22px;              
-  line-height: 20px;          
-  background-color: orange;
-  color: black;
-  border-radius: 0 6px;
-  font-size: 9.7px;
-  text-decoration: none;
-  cursor: pointer;
-   position: relative;
-   right: 672px;
-  }
-  .login-button:hover{
-    transition: transform 1s;
-  transform: scale(1.1);
-  border-radius: 0 6px;
-  color: rgb(231, 229, 229);
-  box-shadow:  1px 1px 7PX rgba(255, 166, 0, 10);
-  background-color:  rgba(255, 166, 0, 0.815);
-}
-.login-button:active{
-  transition: transform 0.1s, box-shadow 0.1s;
-  transform: scale(1.1);
-  box-shadow: 0 1px 0 #cc7a00;
-  }
-  
-  .mobile{
-    height:20px;
-    visibility: hidden;
-  }
-  
  .navbar-img{
-    width: 100vw;
+    width: 100%;
     height: 20vh;
     background-image: url(navbar.jpg);
     background-size: contain;
@@ -558,7 +427,7 @@ margin-top: 9px;
     width: 130PX;
     height: 190px;
     border: none;
-    border-radius: 0 5px 0 5px;
+    border-radius:15px;
     margin-bottom: 15px;
     margin-left: 5px;
     position: relative;
@@ -739,7 +608,6 @@ margin-top: 9px;
   background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
   color: #ffffff;
   padding: 20px 0;
-  margin-top: 50px;
   border-top: 3px solid orange;
 }
 
@@ -825,6 +693,7 @@ margin-top: 9px;
 }
 .footer-email::placeholder {
   color: #635f5f;
+  text-align: center;
 }
 
 .footer-btn {
@@ -894,7 +763,6 @@ margin-top: 9px;
 
 
 }
-
 
 
 
